Fix: Go to Top button not displaying on narrow screens
Resolved an issue where the "Go to Top" button was hidden on screens with a max-width of 720px due to an incorrect media query. Removed the `display: none;` rule to ensure consistent visibility across all screen sizes.

--- a/sass/_article.scss
+++ b/sass/_article.scss
@@ -217,10 +217,6 @@
 	}
 
 	#go-to-top {
-		@media only screen and (max-width: 720px) {
-			display: none;
-		}
-
 		.icon {
 			-webkit-mask-image: var(--icon-top);
 			mask-image: var(--icon-top);
